# syifaa

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 033233505aa3_feynman_session.py  a1b2c3d4e5f6_feynman_session_embed_dim.py  b1c2d3e4f5a6_review_item.py  b4e627609b8f_initial_schema.py  c60d4afd5b47_partial_unique_active_llm_config_per_.py  e4ad1e7b8012_papers_chunks_concepts.py
backend/app/: config.py  db.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  concept.py  concept_edge.py  feynman_session.py  llm_config.py  oauth_account.py  paper.py  paper_chunk.py  review_item.py  user.py
backend/syifa_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_concept_idempotency.py  test_concepts.py  test_dashboard_router.py  test_db.py  test_dim_immutability.py  test_embed_dim_literal.py  test_fernet.py  test_feynman_embed_dim_pinned.py  test_feynman_model.py  test_feynman_router.py  test_feynman_service.py  test_health.py  test_ingest_pipeline.py  test_llm_config.py  test_llm_config_active_constraint.py  test_llm_gateway.py  test_migrations.py  test_oauth.py  test_paper_delete_cleanup.py  test_paper_models.py  test_paper_size.py  test_papers.py  test_pdf_ingest.py  test_review_item_model.py  test_review_router.py  test_security.py  test_sm2.py  test_sse.py  test_storage.py  test_streaming_session_lifecycle.py  test_transcript_size_cap.py  test_user_llm.py
(+54 files in other folders)
